# SuiLipse

./: .gitignore  README.md  nft.move
apps/amm/: package-lock.json  package.json
apps/amm/src/: App.vue  main.ts
apps/amm/src/components/: Card.vue  HelloWorld.vue  Home.vue  Nav.vue
apps/amm/src/components/amm/: AmmCreate.vue
apps/amm/src/components/coin/: CoinCreate.vue
apps/amm/src/components/home/: Item.vue
apps/amm/src/sass/: index.scss
apps/amm/src/style/: index.scss
apps/amm/src/sui/: coin.ts  gateway.ts  object.ts
apps/amm/src/utils/: objectUtils.ts
programs/amm/: Move.toml
programs/amm/sources/: amm.move  amm_math.move  amm_pair.move  amm_script.move  base64.move  jrk.move  math.move  nft.move  nft_collection.move  pool.move  pool_script.move  sbt.move  uq128x128.move  uq64x64.move
sui-client/: Cargo.toml
sui-client/examples/: amm.rs  coin.rs
sui-client/src/: lib.rs  main.rs
sui-client/src/state/: mod.rs
sui-client/tests/: amm.rs
