[package]
name = "sui_elipse"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0"


[dependencies]
async-trait = "0.1.57"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }

[dev-dependencies]
url = "2.2.2"
anyhow = "1.0.5"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.1.17", features = ["derive"] }
dirs = "4.0.0"
